# AcademicRagSystem

./: .gitignore  README.md  ingest_data.py  main.py  pyproject.toml  qa_app.py  streamlit_app.py
qdrant_local/: meta.json
src/: general_agent.py  ingest_data.py  qa_app.py  web_agent.py
