[project]
name = "q-a-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "langchain>=0.3.27",
    "langchain-community>=0.3.31",
    "langchain-huggingface>=0.3.1",
    "langchain-qdrant>=0.2.1",
    "loguru>=0.7.3",
    "ollama>=0.6.1",
    "pypdf>=6.4.0",
    "qdrant-client>=1.16.1",
    "sentence-transformers>=5.1.2",
]
